# zaf-pysortd

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  README.md  new optimization task.md  pyproject.toml  setup.py
data/accuracy/: HTRU2.csv  anneal.csv  bank_marketing.csv  banknote_authentication.csv  bar-7.csv  biodeg.csv  breast_cancer_wisconsin.csv  car_evaluation.csv  cheap_restaurant.csv  coffee_house.csv  expensive_restaurant.csv  haberman.csv  hepatitis.csv  hypothyroid.csv  kr-vs-kp.csv  lymph.csv  monk2.csv  primary-tumor.csv  sources.txt  spect.csv  yeast.csv
data/fairness/: sources.txt
data/regression/: airquality.csv  enb-cool.csv  enb-heat.csv  optical.csv  real-estate.csv  seoul-bike.csv  servo.csv  sources.txt  sync.csv  yacht.csv
examples/: accuracy_example.py  regression_example.py
include/: base.h
include/model/: branch.h  container.h  data.h  feature_vector.h  node.h
include/rashomon/: branch_tracker.h  leaf_tracker.h  rashomon_terminal_solver.h  rashomon_utils.h  small_solution_cache.h  solution_tracker.h  solution_value_heap.h  split_tracker.h  terminal_tracker.h  tracker.h
include/solver/: branch_cache.h  cache.h  cache_entry.h  cost_combiner.h  cost_storage.h  counter.h  data_splitter.h  dataset_cache.h  difference_computer.h  feature_selector.h  optimization_utils.h  result.h  similarity_lowerbound.h  solver.h  statistics.h  terminal_solver.h  tree.h  tuning.h
include/tasks/: average_depth_accuracy.h  optimization_task.h  tasks.h
include/tasks/accuracy/: accuracy.h  cost_complex_accuracy.h
include/tasks/regression/: cost_complex_regression.h
include/utils/: debug.h  dynamic_bitset.h  file_reader.h  parameter_handler.h  pointer_pool.h  stopwatch.h  utils.h
pysortd/: __init__.py  base.py  binarizer.py  classification.py  regression.py  utils.py
src/: bindings.cpp  main.cpp
src/model/: branch.cpp  data.cpp  feature_vector.cpp
src/rashomon/: branch_tracker.cpp  rashomon_terminal_solver.cpp  solution_tracker.cpp  split_tracker.cpp  terminal_tracker.cpp
src/solver/: branch_cache.cpp  cache.cpp  cost_combiner.cpp  cost_storage.cpp  counter.cpp  data_splitter.cpp  dataset_cache.cpp  define_parameters.cpp  difference_computer.cpp  feature_selector_gini.cpp  result.cpp  similarity_lowerbound.cpp  solver.cpp  terminal_solver.cpp
src/tasks/: average_depth_accuracy.cpp  optimization_task.cpp
src/tasks/accuracy/: accuracy.cpp  cost_complex_accuracy.cpp
src/tasks/regression/: cost_complex_regression.cpp
src/utils/: file_reader.cpp  parameter_handler.cpp  utils.cpp
test/: correct_solution_test.cpp
