[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.12.0"
]
build-backend = "setuptools.build_meta"
target-version = "py38"

[project]
name = "pysortd"
version = "0.0.1"
description = "Python Implementation of SORTD: Sorted Rashomon Sets of Trees using Dynamic Programming"
license=  {file = "LICENSE"}
authors = [
]
maintainers = [
]
dependencies =[
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "scikit-learn >=1.2.0",
    "scikit-survival",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent", ]

[project.optional-dependencies]
dev = [
    "pytest>=5.3.0",
    "pytest-cov>=2.8.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default